Add catalog controller, repos & security fixes
Replace CatalogoAdminController with a consolidated CatalogoController exposing CRUD endpoints for faculties, careers, subjects, academic periods and various catalog types (estado evidencia, estado requisito, tipos requisito, roles, sanciones). Add new repository interfaces (ITipo* and ISancionAyudanteCatedraRepository rename), remove old concrete repository files, and add related entity/DTO fields (activo, cedula). Improve security: tighten endpoint authorization rules in SecurityConfig, adjust CORS origins, and update JwtAuthenticationFilter constructor usage. Enhance GlobalExceptionHandler to normalize DB/constraint errors into user-friendly messages and return BAD_REQUEST. Misc: update pom (use spring-boot-starter-test and add surefire argLine), add IntelliJ data source, add frontend service files and route/DTO updates, and include an AuthServiceTest.