@@ -6,7 +6,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.uteq.sgacfinal.dto.Request.TipoRequisitoPostulacionRequestDTO;
 import org.uteq.sgacfinal.dto.Response.TipoRequisitoPostulacionResponseDTO;
 import org.uteq.sgacfinal.entity.TipoRequisitoPostulacion;
-import org.uteq.sgacfinal.repository.TipoRequisitoPostulacionRepository;
+import org.uteq.sgacfinal.repository.ITipoRequisitoPostulacionRepository;
 import org.uteq.sgacfinal.service.ITipoRequisitoPostulacionService;
 
 import java.util.List;
@@ -16,72 +16,114 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Transactional
 public class TipoRequisitoPostulacionServiceImpl implements ITipoRequisitoPostulacionService {
-
-    private final TipoRequisitoPostulacionRepository repository;
-
-    @Override
-    public TipoRequisitoPostulacionResponseDTO crear(TipoRequisitoPostulacionRequestDTO request) {
-        TipoRequisitoPostulacion entidad = new TipoRequisitoPostulacion();
-        entidad.setNombreRequisito(request.getNombreRequisito());
-        entidad.setDescripcion(request.getDescripcion());
-        entidad.setActivo(true);
-
-        entidad = repository.save(entidad);
-        return mapearADTO(entidad);
-    }
-
-    @Override
-    public TipoRequisitoPostulacionResponseDTO actualizar(Integer id, TipoRequisitoPostulacionRequestDTO request) {
-        TipoRequisitoPostulacion entidad = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Requisito no encontrado con ID: " + id));
-
-        entidad.setNombreRequisito(request.getNombreRequisito());
-        entidad.setDescripcion(request.getDescripcion());
-        if(request.getActivo() != null) entidad.setActivo(request.getActivo());
-
-        entidad = repository.save(entidad);
-        return mapearADTO(entidad);
-    }
-
-    @Override
-    public void eliminar(Integer id) {
-        repository.deleteById(id);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public TipoRequisitoPostulacionResponseDTO buscarPorId(Integer id) {
-        TipoRequisitoPostulacion entidad = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Requisito no encontrado con ID: " + id));
-        return mapearADTO(entidad);
-    }
-
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<TipoRequisitoPostulacionResponseDTO> listarRequisitosActivos() {
-        List<TipoRequisitoPostulacion> lista = repository.findByActivoTrue();
-        return lista.stream().map(req -> TipoRequisitoPostulacionResponseDTO.builder()
-                .idTipoRequisitoPostulacion(req.getIdTipoRequisitoPostulacion())
-                .nombreRequisito(req.getNombreRequisito())
-                .descripcion(req.getDescripcion())
-                .build()
-        ).collect(Collectors.toList());
-    }
+    private final ITipoRequisitoPostulacionRepository repository;
 
     @Override
     @Transactional(readOnly = true)
     public List<TipoRequisitoPostulacionResponseDTO> listarTodos() {
-        return repository.findAll().stream()
-                .map(this::mapearADTO)
-                .collect(Collectors.toList());
+        return repository.findAll().stream().map(this::mapToDTO).toList();
     }
 
-    private TipoRequisitoPostulacionResponseDTO mapearADTO(TipoRequisitoPostulacion entidad) {
+    @Override
+    @Transactional(readOnly = true)
+    public List<TipoRequisitoPostulacionResponseDTO> listarActivos() {
+        return repository.findByActivoTrue().stream().map(this::mapToDTO).toList();
+    }
+
+    @Override
+    @Transactional
+    public TipoRequisitoPostulacionResponseDTO crear(TipoRequisitoPostulacionRequestDTO request) {
+        Integer id = repository.crearTipoRequisitoPostulacion(request.getNombreRequisito(), request.getDescripcion());
+        return repository.findById(id).map(this::mapToDTO).orElseThrow();
+    }
+
+    @Override
+    @Transactional
+    public TipoRequisitoPostulacionResponseDTO actualizar(Integer id, TipoRequisitoPostulacionRequestDTO request) {
+        repository.actualizarTipoRequisitoPostulacion(id, request.getNombreRequisito(), request.getDescripcion());
+        return repository.findById(id).map(this::mapToDTO).orElseThrow();
+    }
+
+    @Override
+    @Transactional
+    public void desactivar(Integer id) {
+        repository.desactivarTipoRequisitoPostulacion(id);
+    }
+
+    private TipoRequisitoPostulacionResponseDTO mapToDTO(TipoRequisitoPostulacion entity) {
         return TipoRequisitoPostulacionResponseDTO.builder()
-                .idTipoRequisitoPostulacion(entidad.getIdTipoRequisitoPostulacion())
-                .nombreRequisito(entidad.getNombreRequisito())
-                .descripcion(entidad.getDescripcion())
+                .idTipoRequisitoPostulacion(entity.getIdTipoRequisitoPostulacion())
+                .nombreRequisito(entity.getNombreRequisito())
+                .descripcion(entity.getDescripcion())
+                // .activo(entity.getActivo()) // Descomentar si tu ResponseDTO de esto maneja el boolean
                 .build();
     }
+
+//    private final ITipoRequisitoPostulacionRepository repository;
+//
+//    @Override
+//    public TipoRequisitoPostulacionResponseDTO crear(TipoRequisitoPostulacionRequestDTO request) {
+//        TipoRequisitoPostulacion entidad = new TipoRequisitoPostulacion();
+//        entidad.setNombreRequisito(request.getNombreRequisito());
+//        entidad.setDescripcion(request.getDescripcion());
+//        entidad.setActivo(true);
+//
+//        entidad = repository.save(entidad);
+//        return mapearADTO(entidad);
+//    }
+//
+//    @Override
+//    public TipoRequisitoPostulacionResponseDTO actualizar(Integer id, TipoRequisitoPostulacionRequestDTO request) {
+//        TipoRequisitoPostulacion entidad = repository.findById(id)
+//                .orElseThrow(() -> new RuntimeException("Requisito no encontrado con ID: " + id));
+//
+//        entidad.setNombreRequisito(request.getNombreRequisito());
+//        entidad.setDescripcion(request.getDescripcion());
+//        if(request.getActivo() != null) entidad.setActivo(request.getActivo());
+//
+//        entidad = repository.save(entidad);
+//        return mapearADTO(entidad);
+//    }
+//
+//    @Override
+//    public void eliminar(Integer id) {
+//        repository.deleteById(id);
+//    }
+//
+//    @Override
+//    @Transactional(readOnly = true)
+//    public TipoRequisitoPostulacionResponseDTO buscarPorId(Integer id) {
+//        TipoRequisitoPostulacion entidad = repository.findById(id)
+//                .orElseThrow(() -> new RuntimeException("Requisito no encontrado con ID: " + id));
+//        return mapearADTO(entidad);
+//    }
+//
+//
+//    @Override
+//    @Transactional(readOnly = true)
+//    public List<TipoRequisitoPostulacionResponseDTO> listarRequisitosActivos() {
+//        List<TipoRequisitoPostulacion> lista = repository.findByActivoTrue();
+//        return lista.stream().map(req -> TipoRequisitoPostulacionResponseDTO.builder()
+//                .idTipoRequisitoPostulacion(req.getIdTipoRequisitoPostulacion())
+//                .nombreRequisito(req.getNombreRequisito())
+//                .descripcion(req.getDescripcion())
+//                .build()
+//        ).collect(Collectors.toList());
+//    }
+//
+//    @Override
+//    @Transactional(readOnly = true)
+//    public List<TipoRequisitoPostulacionResponseDTO> listarTodos() {
+//        return repository.findAll().stream()
+//                .map(this::mapearADTO)
+//                .collect(Collectors.toList());
+//    }
+//
+//    private TipoRequisitoPostulacionResponseDTO mapearADTO(TipoRequisitoPostulacion entidad) {
+//        return TipoRequisitoPostulacionResponseDTO.builder()
+//                .idTipoRequisitoPostulacion(entidad.getIdTipoRequisitoPostulacion())
+//                .nombreRequisito(entidad.getNombreRequisito())
+//                .descripcion(entidad.getDescripcion())
+//                .build();
+//    }
 }
